<!--
ISC License

Copyright 2018, Saksham (DawnImpulse)

Permission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted,
provided that the above copyright notice and this permission notice appear in all copies.

THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS,
WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE
OR PERFORMANCE OF THIS SOFTWARE.
-->
<resources>
    <string name="app_name">WallUp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_text">powered by Unsplash </string>

    <string name="privacy"><b>NOTE: </b>This app is Open Source hence completely free to use with no Ads at all. Kindly go through our <a href="https://wallup.sourcei.org/privacy">Privacy Policy</a> .</string>
    <string name="changeNote1"><b>NOTE: </b>Trending Images are updated here everyday around 5.30 AM GMT</string>
    <string name="change4_1"><b>New: </b>Photographer\'s collections in their profile.</string>
    <string name="change4_2"><b>New: </b>Open unsplash photo links directly in Wallup.</string>
    <string name="change4_3"><b>New: </b>Wallup\'s own collections available in the app.</string>
    <string name="change4_4"><b>New: </b>Way to let user\'s know about the upcoming updates. No more guessing friends.</string>
    <string name="change4_5"><b>New: </b>Shared images will be now saved in Downloads/Wallup/ .</string>
    <string name="change4_6"><b>Bug Fixed: </b>Image sharing crash on device running Android 7 &amp; above.</string>
    <string name="change4_7"><b>Improvements: </b>Many other bugs fixes &amp; performance improvements.</string>

    <string name="changes5_1"><b>New: </b>Using machine learning to predict tags for a image (can sometimes give irrelevant results). </string>
    <string name="changes5_2"><b>New: </b>Using ripple animations for click throughout app. </string>
    <string name="change5_3"><b>Improvements: </b>Many other bugs fixes &amp; performance improvements.</string>

    <string name="changes6_1"><b>New: </b>You can now search images too. </string>
    <string name="changes6_2"><b>New: </b>About/Help screen (moved update info here). </string>
    <string name="changes6_3">Minor performance improvements.</string>

    <string name="changes7_1"><b>New: </b>Login with Unsplash.</string>
    <string name="changes7_2"><b>New: </b>Sync your image likes with Unsplash.</string>

    <string name="changes8_1"><b>New: </b>All black theme. Easy on eyes, great for amoled devices &amp; images looks stunning on it.</string>
    <string name="changes8_2"><b>New: </b>Redesigned layout for main screen.</string>
    <string name="changes8_3"><b>Bug Fixes: </b>Various crash handling throughout the app.</string>

    <string name="changes9_1"><b>New: </b>Add image to your personal collection.</string>
    <string name="changes9_2"><b>Improvement: </b>Performance &amp; other improvements.</string>
    <string name="changes9_3"><b>Bug Fixes: </b>Various crash handling throughout the app.</string>

    <string name="changes10_1">Overall design improvements.</string>
    <string name="changes10_2">Create/delete custom collection from both profile &amp; image screen.</string>
    <string name="changes10_3">Pick image quality &amp; location while downloading image.</string>
    <string name="changes10_4">Custom crop &amp; apply wallpaper.</string>
    <string name="changes10_5">Option to change common setting like image quality, cache clear etc.</string>
    <string name="changes10_6"><b>New: </b>Personal profile screen.</string>
    <string name="changes10_7"><b>Improvement: </b>Revamped main screen to highlight image area more.</string>
    <string name="changes10_8"><b>Improvement: </b>Revamped categories screen highlighting individual collection.</string>
    <string name="changes10_9"><b>Improvement: </b>Clear design elements for image details</string>
    <string name="changes10_10">Improved photographers &amp; search screen.</string>
    <string name="changes10_11">Single icon design scheme.</string>
    <string name="changes10_12">Pan/Zoom image on the image details screen.</string>
    <string name="changes10_13">No internet connection handling.</string>
    <string name="changes10_14">Reload icon everywhere if connection fails.</string>
    <string name="changes10_15">Long press on list image for common option.</string>
    <string name="changes10_16">Create new collection.</string>
    <string name="changes10_17">License for icons &amp; libraries.</string>


    <string name="aboutUsername">\@dawnimpulse</string>
    <string name="aboutUnsplash">This application features images from Unsplash via their APIs. All images are free to use and share although kindly read Unsplash guidelines / license for the same.</string>
    <string name="aboutTerms">To avoid any misuse of this app, kindly go through the Terms &amp; Conditions.</string>
    <string name="aboutContact">For any query / help contact me via <b>Twitter</b> or send me a mail on <b>dawnimpulse@gmail.com</b></string>

    <string name="loginText1">Perform various actions directly on \n<b>Unsplash</b></string>
    <string name="loginText2">Like\nImages</string>
    <string name="loginText3">Add Images\nto your\nCollections</string>
    <string name="loginText4">Manage \nProfile</string>
    <string name="loginText5"><b>Wallup</b> need access to your <b>Unsplash profile</b> with various <b>permissions</b> to help manage your profile  (some permissions provided now will be required in future updates). Be assured that we will <b>never</b> collect/store your profile, images or any other info at all.</string>

    <string name="intro_welcome_1"><b>Wallup</b> provides you with Thousands of Images from the wonderful <b>Unsplash</b> Community right at your fingertips.\n\n\nAnd yes, <b>Wallup</b> is also an unofficial client for <b>Unsplash</b> giving you freedom to manage your complete <b>Unsplash</b> profile right on your Android device.</string>
    <string name="intro_wallup_1"><b>Wallup</b> is powered by <b>UNSPLASH API</b> i.e. everything in this application is possible because of wonderful people at <b>Unsplash</b>. Cheers to them.\n\nLookout for <b>Unsplash</b> logo in this application which will redirect you to their website either from an image or photographer\'s profile.\n\nUrge you to go through <b>Unsplash</b> guidelines on using images.</string>
    <string name="intro_setting_1">This project is Open Source &amp; completely free to use. We only collect crash data &amp; some analytics. There will be no personal data collected at all. </string>
    <string name="intro_setting_2">Don\'t want to share crash data or analytics ?\nChange image quality ?\n\nVisit Settings Page to make changes as you like.</string>

    <string name="iconsLicense">Most of the icons in this application are provided by Material Design Icons &amp; Google Icons. Visit to see more from these brilliant communities.</string>

</resources>
